# cmake-project-template

./: .gitignore  CMakeLists.txt  LICENCE  README.md  README.template-cs.md  README.template-en.md
App/: App.cpp  App.hpp  CMakeLists.txt
App/FolderBlockChain/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  CMakeLists.txt  Transaction.cpp  Transaction.hpp  Wallet.cpp  Wallet.hpp
App/FolderCrcGen/: CMakeLists.txt  CrcGen.cpp  CrcGen.hpp
App/FolderEmojiTools/: CMakeLists.txt  EmojiTools.cpp  EmojiTools.hpp  EmojiWrapper.cpp  EmojiWrapper.hpp  emoji-test.hpp
App/FolderHelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp
TestApp/: CMakeLists.txt
TestApp/Tests/: Tests.cpp
src/: App.cpp  CMakeLists.txt  project.cpp  project.hpp
src/FolderDivision/: CMakeLists.txt  ModuleDivision.cpp  ModuleDivision.hpp
src/FolderHelloWorld/: CMakeLists.txt  ModuleHelloWorld.cpp
test/: CMakeLists.txt
test/src/: Tests.cpp  project_tests.cpp
